# piaic-batch-47-classes

class-1/hello-world/: pyproject.toml
class-1/hello-world/hello/: main.py
class-2/: pyproject.toml
class-2/app/: main.py  settings.py
class-4/: hello.py  pyproject.toml  sqlmodel_hello.py
online-class/: pyproject.toml
online-class/online_class/: main.py
todo-online-class/: pyproject.toml
todo-online-class/app/: main.py
todo-online-class/tests/: test_main.py
todo-server/: pyproject.toml
todo-server/app/: main.py  settings.py
